2010-07-14  Oliver Hunt  <oliver@apple.com>

        Reviewed by Don Melton.

        Crash when trying to enable JIT and Interpreter in a single build.

        CFPreferences code added at the last minute failed to account for
        the preference not being present and then attempted to CFRelease
        a null value.

        * runtime/JSGlobalData.cpp:
        (JSC::JSGlobalData::JSGlobalData):

2010-07-14  Zoltan Herczeg  <zherczeg@webkit.org>

        Reviewed by Darin Adler.

        Change indentations in the lexer
        https://bugs.webkit.org/show_bug.cgi?id=41845

        This patch fixes an old, indentation error comes from kjs,
        as webkit has a different style rule for switches, and change
        the indentation of the main switch, which is a temporary
        style error. This change makes easier to see the behavioural
        changes in the follow-up patch.

        No behavioural changes.

        * parser/Lexer.cpp:
        (JSC::singleEscape):
        (JSC::Lexer::lex):

2010-07-13  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r63262.
        http://trac.webkit.org/changeset/63262
        https://bugs.webkit.org/show_bug.cgi?id=42229

        broke Windows compile (Requested by bweinstein on #webkit).

        * API/tests/testapi.c:
        (assertEqualsAsCharactersPtr):
        (main):
        * testapi.pro: Removed.

2010-07-13  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        ES5 requires BOMs to be treated as whitespace
        https://bugs.webkit.org/show_bug.cgi?id=42218

        Add BOM character to the Lexer's definition of whitespace,
        and remove the logic that dealt with stripping BOMs and
        caching the cleaned string.

        * parser/Lexer.h:
        (JSC::Lexer::isWhiteSpace):
        * parser/SourceProvider.h:
        (JSC::UStringSourceProvider::create):
        (JSC::UStringSourceProvider::UStringSourceProvider):
        * wtf/text/StringImpl.h: